test/regress/ext:multi-memory/memory_size3.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\87\80\80\80\00"
    "\03\00\00\00\01\00\00\0a\8a\80\80\80\00\01\84\80"
    "\80\80\00\00\3f\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7d\03\82\80\80\80\00\01\00\05\89\80\80\80"
    "\00\04\00\00\00\00\00\00\00\01\0a\8a\80\80\80\00"
    "\01\84\80\80\80\00\00\3f\03\0b"
  )
  "type mismatch"
)
